using rake for installation

--- a/bin/config/urcc.config
+++ b/bin/config/urcc.config
@@ -12,7 +12,7 @@ opt_ir = true
 opt_cdump = true
 opt_bin = true
 
-[PASS]
+[PASSES]
 pass_path = .
-pass = helloworld, test
+passes = helloworld
        
